AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = neshla
neshla_SOURCES = \
    banks.c \
    compiler.c \
    config.c \
    exp_asm.c \
    exp_funccall.c \
    exp_funcdeclare.c \
    exp_general.c \
    exp_ifloop.c \
    exp_labels.c \
    exp_preprocess.c \
    exp_switch.c \
    exp_vardeclare.c \
    fileio.c \
    fixoffs.c \
    functions.c \
    getcode.c \
    init.c \
    labels.c \
    list.c \
    mappers.c \
    memalloc.c \
    message.c \
    opcodes.c \
    opcodetable.c \
    outbuf.c \
    prepbase.c \
    scrbase.c \
    scrbin.c \
    strhand.c \
    vars.c \
    writecode.c

